examples/test/testpolicy7582.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7582
  namespace: namespace310
spec:
  podSelector:
    matchLabels:
      key29: value18
      key47: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value36
      podSelector:
        matchLabels:
          key36: value15
          key26: value36
          key38: value6
